<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtcm_msgs</name>
  <version>1.1.6</version>
  <description>The rtcm_msgs package contains messages related to data in the RTCM format.</description>
  <maintainer email="nguyenhatrung411@gmail.com">Zeki</maintainer>
  <license>BSD</license>
  <author email="nguyenhatrung411@gmail.com">Zeki</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_depend>builtin_interfaces</build_depend>  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>

</package>
